# kairos-text-scouts

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
kairos_text/: __init__.py  config.py  dedup.py  filter.py  local.py  models.py  normalize.py  prompts.py  sentiment.py  service.py
kairos_text/sources/: __init__.py  _brightdata.py  base.py  brightdata_reddit.py  brightdata_x.py  gdelt.py  reddit.py  rss.py
tests/: test_dedup.py  test_filter.py  test_gdelt.py  test_normalize.py  test_reddit.py  test_rss.py  test_sentiment.py  test_service.py  test_sources_brightdata.py
